<resources>
    <string name="app_name">Careify</string>
    <string name="to_be_implemented">To be implemented!</string>
    <string name="testButton">Testbutton</string>
    <string name="delete">Delete</string>
    <string name="deletePatientConfirm">Do you really want to delete this patient?</string>
    <string name="deleteCategoryConfirm">Do you really want to delete this area?</string>

    <string name="login">Login</string>
    <string name="facility">Facility</string>
    <string name="password">Password</string>
    <string name="loginMessage">To get login credentials, please contact us at :\n\nxileff.muster@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="logoutConfirm">Are you sure you want to log out?</string>
    <string name="edit">Edit</string>
    <string name="editConfirm">Are you sure you want to save your changes?</string>

    <string name="pleaseEnter">"Please enter a facility and password"</string>
    <string name="passwordIncorrect">"Password incorrect!"</string>
    <string name="notRegisterd">"Facility is not registered!"</string>
    <string name="noConnection">"No connection to Database!"</string>
    <string name="enterCategory">"Please enter the new category's name!"</string>
    <string name="enterPatient">"Please enter the patient's name!"</string>
    <string name="categoryRemoved">"Category removed!"</string>
    <string name="patientRemoved">"Patient removed!"</string>
    <string name="patientDoesntExist">"Patient doesn't exist!"</string>

    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="room">Room</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="medication">Medication</string>
    <string name="category">Area</string>
    <string name="patients">Patients</string>
    <string name="patient">Patient</string>

    <string name="add_category">Add area</string>
    <string name="add_patient">Add patient</string>
    <string name="add">Add</string>
    <string name="discard">Discard</string>
    <string name="discardConfirm">Are you sure you want to discard your changes?</string>

    <string name="enter_facility">Enter facility</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_category">Enter new area</string>

    <string name="enter_name">Enter name</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_room">Enter room</string>
    <string name="enter_medication">Enter medicine</string>
    <string name="enter_diagnosis">Enter diagnosis</string>
</resources>