<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Patient">

    <ImageView
        android:id="@+id/addImgPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/addPatientMedication"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="335dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_medication"
        android:textColor="#8E8E8E"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addPatientRoomText"
        android:layout_width="60dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:text="@string/room"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addPatientDiagnosisText"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:text="@string/diagnosis"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addPatientName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_name"
        android:textColor="#8E8E8E"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addPatientAgeText"
        android:layout_width="60dp"
        android:layout_height="24dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="160dp"
        android:text="@string/age"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addPatientAge"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_age"
        android:textColor="#8E8E8E"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addPatientMedicationText"
        android:layout_width="115dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="350dp"
        android:text="@string/medication"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addPatientNameText"
        android:layout_width="60dp"
        android:layout_height="24dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="110dp"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addPatientDiagnosis"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="285dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_diagnosis"
        android:textColor="#8E8E8E"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addPatientRoom"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="235dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_room"
        android:textColor="#8E8E8E"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddPatient"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/primaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAddPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:backgroundTint="@color/primary"
        android:onClick="savePatient"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>